--- a/global-style.50.scss
+++ b/global-style.50.scss
@@ -37,11 +37,13 @@ html {
 			}
 		}
 
+		/*
 		#react-root {
 			display: flex;
 			flex-direction: column;
 			flex-wrap: nowrap;
 		}
+		*/
 	}
 }
 
