--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -59,25 +59,33 @@ $theme_info_bg: #17a2b8 !default;
 $theme_info_fg: #fff !default;
 
 // buttons
-$theme_primary_btn_bg: $unbranded_dark !default;
-$theme_primary_btn_fg: $unbranded_light !default;
-$theme_primary_btn_border: 2px solid transparent !default;
+$theme_primary_btn_bg: #007bff !default;
+$theme_primary_btn_fg: #fff !default;
+$theme_primary_btn_font_size: 1rem !default;
+$theme_primary_btn_font_weight: 400 !default;
+$theme_primary_btn_border: 1px solid #007bff !default;
+$theme_primary_btn_border_radius: .25rem !default;
+$theme_primary_btn_padding: .375rem .75rem !default;
 $theme_primary_btn_hover_bg: darken($theme_primary_btn_bg, 10%) !default;
 $theme_primary_btn_hover_fg: darken($theme_primary_btn_fg, 10%) !default;
-$theme_primary_btn_hover_border: 2px solid transparent !default;
+$theme_primary_btn_hover_border: 1px solid transparent !default;
 $theme_primary_btn_active_bg: darken($theme_primary_btn_bg, 20%) !default;
 $theme_primary_btn_active_fg: darken($theme_primary_btn_fg, 20%) !default;
-$theme_primary_btn_active_border: 2px solid transparent !default;
+$theme_primary_btn_active_border: 1px solid transparent !default;
 
-$theme_secondary_btn_bg: $unbranded_light !default;
-$theme_secondary_btn_fg: $unbranded_dark !default;
-$theme_secondary_btn_border: 2px solid $unbranded_dark !default;
+$theme_secondary_btn_bg: #6c757d !default;
+$theme_secondary_btn_fg: #6c757d !default;
+$theme_secondary_btn_font_size: 1rem !default;
+$theme_secondary_btn_font_weight: 400 !default;
+$theme_secondary_btn_border: 1px solid #6c757d !default;
+$theme_secondary_btn_border_radius: .25rem !default;
+$theme_secondary_btn_padding: .375rem .75rem !default;
 $theme_secondary_btn_hover_bg: darken($theme_secondary_btn_bg, 10%) !default;
 $theme_secondary_btn_hover_fg: darken($theme_secondary_btn_fg, 10%) !default;
-$theme_secondary_btn_hover_border: 2px solid darken($unbranded_dark, 10%) !default;
+$theme_secondary_btn_hover_border: 1px solid darken($unbranded_dark, 10%) !default;
 $theme_secondary_btn_active_bg: darken($theme_secondary_btn_bg, 20%) !default;
 $theme_secondary_btn_active_fg: darken($theme_secondary_btn_fg, 20%) !default;
-$theme_secondary_btn_active_border: 2px solid darken($unbranded_dark, 20%) !default;
+$theme_secondary_btn_active_border: 1px solid darken($unbranded_dark, 20%) !default;
 
 // modals
 // overrides for bootstrap modal defaults
