--- a/global-buttons.35.scss
+++ b/global-buttons.35.scss
@@ -157,6 +157,24 @@
 
     &.btn-dark {
     }
+
+    &.btn-lg {
+        /*
+        padding: .5rem 1rem;
+        font-size: 1.25rem;
+        line-height: 1.5;
+        border-radius: .3rem;
+        */
+    }
+
+    &.btn-sm {
+        /*
+        padding: .25rem .5rem;
+        font-size: .875rem;
+        line-height: 1.5;
+        border-radius: .2rem;
+        */
+    }
 }
 
 input {
