--- a/Collapsible.scss
+++ b/Collapsible.scss
@@ -4,6 +4,8 @@
 		list-style: none;
 		display: flex;
 		align-items: center;
+		padding: 2rem 1.5rem;
+		border: 1px solid rgb(240,240,240);
 
 		&::-webkit-details-marker {
 			display: none;
@@ -12,6 +14,7 @@
 		.collapsible-title {
 			@include font_size(20);
 			font-weight: bold;
+			margin: 0;
 		}
 
 		.collapsible-icon {
@@ -25,6 +28,7 @@
 	}
 
 	&[open] > .collapsible-summary {
+		border-bottom: 0;
 
 		.collapsible-icon {
 			-ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2)";
@@ -34,33 +38,9 @@
 
 	.collapsible-content {
 		@include font_size(16);
-	}
-	/*
-	h2 {
-		background: rgb(240,240,240);
-		padding: 20px;
-		margin: 0;
-	}
-
-	.collapsible-body {
 		border: 1px solid rgb(240,240,240);
-		margin-bottom: 10px;
-		padding: 20px;
+		border-top: 0;
+		margin-bottom: 1rem;
+		padding: 1.5rem;
 	}
-
-
-details:not([open]) > *:not(summary) {
-	display: none;
-	}
-	
-	summary::before {
-		content: "x";
-		padding-right: 0.3rem;
-		font-size: 0.6rem;
-		cursor: default;
-		}
-		
-		[open] > summary::before {content: "x";}
-
-	*/
 }
