--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -62,10 +62,16 @@ $theme_info_fg: #fff !default;
 $theme_primary_btn_bg: #007bff !default;
 $theme_primary_btn_fg: #fff !default;
 $theme_primary_btn_font_size: 1rem !default;
+$theme_primary_btn_font_size_lg: 1.25rem !default;
+$theme_primary_btn_font_size_sm: .875rem !default;
 $theme_primary_btn_font_weight: 400 !default;
 $theme_primary_btn_border: 1px solid #007bff !default;
 $theme_primary_btn_border_radius: .25rem !default;
+$theme_primary_btn_border_radius_lg: .3rem !default;
+$theme_primary_btn_border_radius_sm: .2rem !default;
 $theme_primary_btn_padding: .375rem .75rem !default;
+$theme_primary_btn_padding_lg: .5rem 1rem !default;
+$theme_primary_btn_padding_sm: .25rem .5rem !default;
 $theme_primary_btn_hover_bg: darken($theme_primary_btn_bg, 10%) !default;
 $theme_primary_btn_hover_fg: darken($theme_primary_btn_fg, 10%) !default;
 $theme_primary_btn_hover_border: 1px solid transparent !default;
@@ -76,10 +82,16 @@ $theme_primary_btn_active_border: 1px solid transparent !default;
 $theme_secondary_btn_bg: #6c757d !default;
 $theme_secondary_btn_fg: #6c757d !default;
 $theme_secondary_btn_font_size: 1rem !default;
+$theme_secondary_btn_font_size_lg: 1.25rem !default;
+$theme_secondary_btn_font_size_sm: .875rem !default;
 $theme_secondary_btn_font_weight: 400 !default;
 $theme_secondary_btn_border: 1px solid #6c757d !default;
 $theme_secondary_btn_border_radius: .25rem !default;
+$theme_secondary_btn_border_radius_lg: .3rem !default;
+$theme_secondary_btn_border_radius_sm: .2rem !default;
 $theme_secondary_btn_padding: .375rem .75rem !default;
+$theme_secondary_btn_padding_lg: .5rem 1rem !default;
+$theme_secondary_btn_padding_sm: .25rem .5rem !default;
 $theme_secondary_btn_hover_bg: darken($theme_secondary_btn_bg, 10%) !default;
 $theme_secondary_btn_hover_fg: darken($theme_secondary_btn_fg, 10%) !default;
 $theme_secondary_btn_hover_border: 1px solid darken($unbranded_dark, 10%) !default;
