--- a/canvas-editor.scss
+++ b/canvas-editor.scss
@@ -64,4 +64,20 @@
 			}
 		}
 	}
+	
+	.back-to-visual {
+		margin-bottom: .75rem;
+	}
+
+	textarea.form-control {
+		//@include input_field_styling;
+
+		&.json-preview {
+			@include font_size(12);
+			font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
+			min-height: 16rem;
+			tab-size: 2;
+		}
+	}
+	
 }
