--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -58,6 +58,12 @@ $theme_warning_fg: #212529 !default;
 $theme_info_bg: #17a2b8 !default;
 $theme_info_fg: #fff !default;
 
+$theme_light_bg: #f8f9fa !default;
+$theme_light_fg: #212529 !default;
+
+$theme_dark_bg: #343a40 !default;
+$theme_dark_fg: #fff !default;
+
 // buttons
 $theme_primary_btn_bg: #007bff !default;
 $theme_primary_btn_fg: #fff !default;
