--- a/global-bootstrap.55.scss
+++ b/global-bootstrap.55.scss
@@ -69,6 +69,11 @@
 
                     > button, > a {
                         margin-top: 1rem;
+                        margin-right: 1rem;
+
+                        &:last-child {
+                            margin-right: 0;
+                        }
                     }
                 }
             }
