--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -86,7 +86,7 @@ $theme_primary_btn_active_fg: darken($theme_primary_btn_fg, 20%) !default;
 $theme_primary_btn_active_border: 1px solid transparent !default;
 
 $theme_secondary_btn_bg: #6c757d !default;
-$theme_secondary_btn_fg: #6c757d !default;
+$theme_secondary_btn_fg: #fff !default;
 $theme_secondary_btn_font_size: 1rem !default;
 $theme_secondary_btn_font_size_lg: 1.25rem !default;
 $theme_secondary_btn_font_size_sm: .875rem !default;
