allowance made for input fields with no type set

--- a/global-forms.45.scss
+++ b/global-forms.45.scss
@@ -126,6 +126,8 @@ input.form-control {
     &[type='radio'] {
     }
     // text entry
+    &:not([type]),
+    &[type=""],
     &[type='date'],
     &[type='datetime'], // obsolete
     &[type='datetime-local'],
