--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -5,20 +5,339 @@
 	** CHANGES / ADDITIONS TO THESE SETTINGS WILL APPLY TO ALL SOCIALSTACK PROJECTS - use project-level SASS to override for a specific project **
 */
 
+/*
+ * socialstack default palette - TO MAKE PROJECT-LEVEL ALTERATIONS, DEFINE $socialstack_project_palette within your project
+ * CSS values should be held in the following structure:
+ *
+ *  key: "base level value",
+ *  categoryName: (
+ *      key: "category level value",
+ *	)
+ * NB: WORK IN PROGRESS
+ */
+$socialstack_default_palette: (
+    primary: (
+        color: #fff,
+        background-color: #007bff
+    ),
+    secondary: (
+        color: #fff,
+        background-color: #6c757d
+    ),
+    success: (
+        color: #fff,
+        background-color: #28a745
+    ),
+    danger: (
+        color: #fff,
+        background-color: #dc3545
+    ),
+    warning: (
+        color: #212529,
+        background-color: #ffc107
+    ),
+    info: (
+        color: #fff,
+        background-color: #17a2b8
+    ),
+    light: (
+        color: #212529,
+        background-color: #f8f9fa
+    ),
+    dark: (
+        color: #fff,
+        background-color: #343a40   
+    )
+);
+
+$socialstack_default_alert: (
+    padding: .75rem 1.25rem,
+    border-width: 1px,
+    border-radius: .25rem,
+    
+    primary: (
+        color: #004085,
+        background-color: #cce5ff,
+        border-color: #b8daff
+    ),
+    secondary: (
+        color: #383d41,
+        background-color: #e2e3e5,
+        border-color: #d6d8db
+    ),
+	success: (
+		color: #155724,
+		background-color: #d4edda,
+		border-color: #c3e6cb
+	),
+	danger: (
+		color: #721c24,
+		background-color: #f8d7da,
+		border-color: #f5c6cb
+	),
+	warning: (
+		color: #856404,
+		background-color: #fff3cd,
+		border-color: #ffeeba
+	),
+	info: (
+		color: #0c5460,
+		background-color: #d1ecf1,
+		border-color: #bee5eb
+	)
+);
+
+$socialstack_default_badge: (
+    padding: .25em .4em,
+    font-size: 75%,
+    font-weight: 700,
+    border-radius: .25rem,
+    primary: (
+        color: get_palette_value($socialstack_default_palette, color, primary),
+        background-color: get_palette_value($socialstack_default_palette, background-color, primary)
+    ),
+    secondary: (
+        color: get_palette_value($socialstack_default_palette, color, secondary),
+        background-color: get_palette_value($socialstack_default_palette, background-color, secondary)
+    ),
+    success: (
+        color: get_palette_value($socialstack_default_palette, color, success),
+        background-color: get_palette_value($socialstack_default_palette, background-color, success)
+    ),
+    danger: (
+        color: get_palette_value($socialstack_default_palette, color, danger),
+        background-color: get_palette_value($socialstack_default_palette, background-color, danger)
+    ),
+    warning: (
+        color: get_palette_value($socialstack_default_palette, color, warning),
+        background-color: get_palette_value($socialstack_default_palette, background-color, warning)
+    ),
+    info: (
+        color: get_palette_value($socialstack_default_palette, color, info),
+        background-color: get_palette_value($socialstack_default_palette, background-color, info)
+    ),
+    light: (
+        color: get_palette_value($socialstack_default_palette, color, light),
+        background-color: get_palette_value($socialstack_default_palette, background-color, light)
+    ),
+    dark: (
+        color: get_palette_value($socialstack_default_palette, color, dark),
+        background-color: get_palette_value($socialstack_default_palette, background-color, dark)
+    )
+);
+
+$socialstack_default_breadcrumb: (
+);
+
+/*
+$theme_primary_btn_bg: #007bff !default;
+$theme_primary_btn_fg: #fff !default;
+$theme_primary_btn_font_size: 1rem !default;
+$theme_primary_btn_font_size_lg: 1.25rem !default;
+$theme_primary_btn_font_size_sm: .875rem !default;
+$theme_primary_btn_font_weight: 400 !default;
+$theme_primary_btn_border_radius: .25rem !default;
+$theme_primary_btn_border_radius_lg: .3rem !default;
+$theme_primary_btn_border_radius_sm: .2rem !default;
+$theme_primary_btn_padding_lg: .5rem 1rem !default;
+$theme_primary_btn_padding_sm: .25rem .5rem !default;
+
+$theme_primary_btn_hover_bg: darken($theme_primary_btn_bg, 10%) !default;
+$theme_primary_btn_hover_fg: darken($theme_primary_btn_fg, 10%) !default;
+$theme_primary_btn_hover_border: 1px solid transparent !default;
+
+$theme_primary_btn_active_bg: darken($theme_primary_btn_bg, 20%) !default;
+$theme_primary_btn_active_fg: darken($theme_primary_btn_fg, 20%) !default;
+$theme_primary_btn_active_border: 1px solid transparent !default;
+*/
+
+// outline buttons?
+
+$socialstack_default_buttons: (
+    //font-family: "",
+    font-weight: 400,
+    //color: #;
+    border-width: 1px,
+    padding: .375rem .75rem,
+    font-size: 1rem,
+    border-radius: .25rem,
+    disabled: (
+        opacity: .65
+    ),
+    primary: (
+        color: get_palette_value($socialstack_default_palette, color, primary),
+        background-color: get_palette_value($socialstack_default_palette, background-color, primary),
+        border-color: get_palette_value($socialstack_default_palette, background-color, primary),
+        hover: (
+            color: get_hover_value($socialstack_default_palette, color, primary),
+            background-color: get_hover_value($socialstack_default_palette, background-color, primary),
+            border-color: get_hover_value($socialstack_default_palette, background-color, primary)
+        ),
+        active: (
+            color: get_active_value($socialstack_default_palette, color, primary),
+            background-color: get_active_value($socialstack_default_palette, background-color, primary),
+            border-color: get_active_value($socialstack_default_palette, background-color, primary)
+        ),
+        focus: (
+        	// TODO
+            outline: 0,
+            box-shadow: 0 0 0 0.2rem rgba(38,143,255,.5)
+        )
+    ),
+    secondary: (
+        color: get_palette_value($socialstack_default_palette, color, secondary),
+        background-color: get_palette_value($socialstack_default_palette, background-color, secondary),
+        border-color: get_palette_value($socialstack_default_palette, background-color, secondary)
+    ),
+    success: (
+        color: get_palette_value($socialstack_default_palette, color, success),
+        background-color: get_palette_value($socialstack_default_palette, background-color, success),
+        border-color: get_palette_value($socialstack_default_palette, background-color, success)
+    ),
+    danger: (
+        color: get_palette_value($socialstack_default_palette, color, danger),
+        background-color: get_palette_value($socialstack_default_palette, background-color, danger),
+        border-color: get_palette_value($socialstack_default_palette, background-color, danger)
+    ),
+    warning: (
+        color: get_palette_value($socialstack_default_palette, color, warning),
+        background-color: get_palette_value($socialstack_default_palette, background-color, warning),
+        border-color: get_palette_value($socialstack_default_palette, background-color, warning)
+    ),
+    info: (
+        color: get_palette_value($socialstack_default_palette, color, info),
+        background-color: get_palette_value($socialstack_default_palette, background-color, info),
+        border-color: get_palette_value($socialstack_default_palette, background-color, info)
+    ),
+    light: (
+        color: get_palette_value($socialstack_default_palette, color, light),
+        background-color: get_palette_value($socialstack_default_palette, background-color, light),
+        border-color: get_palette_value($socialstack_default_palette, background-color, light)
+    ),
+    dark: (
+        color: get_palette_value($socialstack_default_palette, color, dark),
+        background-color: get_palette_value($socialstack_default_palette, background-color, dark),
+        border-color: get_palette_value($socialstack_default_palette, background-color, dark)
+    )
+);
+
+$socialstack_default_button_group: (
+);
+
+$socialstack_default_card: (
+);
+
+$socialstack_default_carousel: (
+);
+
+$socialstack_default_collapse: (
+);
+
+$socialstack_default_dropdowns: (
+);
+
+$socialstack_default_forms: (
+);
+
+$socialstack_default_input_group: (
+);
+
+$socialstack_default_jumbotron: (
+);
+
+$socialstack_default_list_group: (
+);
+
+$socialstack_default_media_object: (
+);
+
+$socialstack_default_modal: (
+);
+
+$socialstack_default_navs: (
+);
+
+$socialstack_default_navbar: (
+);
+
+$socialstack_default_progress: (
+);
+
+$socialstack_default_scrollspy: (
+);
+
+$socialstack_default_spinners: (
+);
+
+$socialstack_default_toasts: (
+);
+
+$socialstack_default_tooltips: (
+);
+
+/*
+ * socialstack default theme - TO MAKE PROJECT-LEVEL ALTERATIONS, DEFINE $socialstack_project_theme within your project
+ * CSS values should be held in the following structure:
+ *
+ *  key: "base level value",
+ *  categoryName: (
+ *      key: "category level value",
+ *      contextName: (
+ *          key: "context level value",
+ *          subContextName: (
+ *              key: "subcontext level value"
+ *              state: (
+ *                  key: "state value"
+ *              )
+ *			)
+ *		)
+ *	)
+ * NB: WORK IN PROGRESS
+ */
+
+$base_font_size: 16 !default; // in px
+
+@function px_to_rem($px) {
+    @return 0rem + $px / $base_font_size;
+}
+
+$socialstack_default_theme: (
+    typography: (
+        //baseFontSize: 16
+    ),
+    // bootstrap defaults
+    bootstrap: (
+        alert: $socialstack_default_alert,
+		badge: $socialstack_default_badge,
+        breadcrumb: $socialstack_default_breadcrumb,
+        buttons: $socialstack_default_buttons,
+        buttonGroup: $socialstack_default_button_group,
+        card: $socialstack_default_card,
+        carousel: $socialstack_default_carousel,
+        collapse: $socialstack_default_collapse,
+        dropdowns: $socialstack_default_dropdowns,
+        forms: $socialstack_default_forms,
+        inputGroup: $socialstack_default_input_group,
+        jumbotron: $socialstack_default_jumbotron,
+        listGroup: $socialstack_default_list_group,
+        mediaObject: $socialstack_default_media_object,
+        modal: $socialstack_default_modal,
+        navs: $socialstack_default_navs,
+        navbar: $socialstack_default_navbar,
+        progress: $socialstack_default_progress,
+        scrollspy: $socialstack_default_scrollspy,
+        spinners: $socialstack_default_spinners,
+        toasts: $socialstack_default_toasts,
+        tooltips: $socialstack_default_tooltips
+    )
+);
+
 $site_bg: #fff !default;
 
 $unbranded_dark: #aaa;
 $unbranded_light: #fff;
 
-// badges
-$badge_bg: $unbranded_dark !default;
-$badge_fg: $unbranded_light !default;
-$badge_border_radius: 0 !default;
-$badge_padding_x: 8 !default;
-$badge_padding_y: 2 !default;
-
 // typography
-$base_font_size: 16 !default; // in px
 $theme_font_family: "Open Sans", Arial, sans-serif !default;
 
 $title_font_family: $theme_font_family !default;
