--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -305,6 +305,9 @@ $socialstack_default_theme: (
     typography: (
         //baseFontSize: 16
     ),
+    misc: (
+        //spinner: ,
+    ),
     // bootstrap defaults
     bootstrap: (
         alert: $socialstack_default_alert,
