admin menu logo made generic

--- a/main-menu.scss
+++ b/main-menu.scss
@@ -2,8 +2,9 @@
 	padding-bottom: 1rem;
 
 	.logo {
-		width: 200px;
+		display: none;
 		margin: 1rem 15px;
+		background-repeat: no-repeat;
 	}
 
 	.loop-item {
