--- a/main-menu.scss
+++ b/main-menu.scss
@@ -1,10 +1,15 @@
 .main-menu {
-	padding-bottom: 1rem;
 
 	.logo {
 		display: none;
 		margin: 1rem 15px;
 		background-repeat: no-repeat;
+	}
+
+	.loop {
+		padding: 0 0 1rem 0;
+		margin: 0;
+		list-style: none;
 	}
 
 	.loop-item {
@@ -34,12 +39,6 @@
 			text-align: center;
 		}
 
-	}
-	
-	.loop {
-		padding: 0;
-		margin: 0;
-		list-style: none;
 	}
 
 }
