--- a/Paginator.scss
+++ b/Paginator.scss
@@ -1,9 +1,10 @@
-/*
-	Optional stylesheet
-*/
+$paginator_justify_content: get_value(justify-content, bootstrap, pagination);
 
-.paginator{
+.paginator {
+	// NB: Bootstrap-specific .pagination overrides are set within global-bootstrap.55.scss
+	// (based in turn on project-specific settings from $socialstack_project_theme and fallbacks set in $socialstack_default_theme)
 	
+	/*
 	input{
 		border: 1px solid lightgrey;
 		width: 3em;
@@ -25,6 +26,29 @@
 		&:hover{
 			cursor: pointer;
 		}
+	}
+	*/
+
+	.pagination-overview {
+
+		@if ($paginator_justify_content == center) {
+			text-align: center;
+		}
+
+		@if ($paginator_justify_content == flex-start) {
+			text-align: left;
+		}
+
+		@if ($paginator_justify_content == flex-end) {
+			text-align: right;
+		}
+
+		.form-control {
+			margin: 0 .5rem;
+			display: inline-block;
+			width: 5rem;
+		}
+
 	}
 	
 }
