--- a/global-forms.45.scss
+++ b/global-forms.45.scss
@@ -82,10 +82,12 @@ fieldset {
 }
 
 html:not(.admin) {
-    label {
+    label,
+    .field-label {
         @include font_size($ss_form_field_label_font_size);
         color: $ss_form_field_label;
         font-weight: $ss_form_field_label_font_weight;
+        margin-bottom: .5rem;
 
         &:not(.label-important):not(.custom-control-label) {
             @if $ss_form_field_label_hidden {
