--- a/global-bootstrap.55.scss
+++ b/global-bootstrap.55.scss
@@ -194,6 +194,11 @@ $pagination_min_size: get_value(minSize, bootstrap, pagination);
                     }
                 }
             }
+
+            // hide empty footers
+            .modal-footer:empty {
+                display: none;
+            }
         }
     }
 
