--- a/global-functions.14.scss
+++ b/global-functions.14.scss
@@ -19,3 +19,16 @@
     $new-fill-string: str-replace(inspect($new-fill), '#', '%23');
     @return str-replace($svg, $fill-to-replace, $new-fill-string);
 }
+
+@function hex_to_rgba($hex, $opacity: 1) {
+    $red: red($hex);
+    $green: green($hex);
+    $blue: blue($hex);
+
+    @if ($opacity == 1) {
+        @return rgb($red, $green, $blue);
+    } @else {
+        @return rgba($red, $green, $blue, $opacity);
+    }
+
+}
