modal defaults updated

--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -252,6 +252,9 @@ $socialstack_default_media_object: (
 );
 
 $socialstack_default_modal: (
+    header: (
+        border-bottom-width: 1px
+    )
 );
 
 $socialstack_default_navs: (
