--- a/global-mixins.15.scss
+++ b/global-mixins.15.scss
@@ -44,8 +44,8 @@
 }
 
 // typically used in the following context:
-// <div class="wrapper">
-//    <i class="fr fr-star"></i>
+// <div className="wrapper">
+//    <i className="fr fr-star"></i>
 //    <span>Label text</span>
 // </div>
 // where .wrapper is a display: flex; align-items: center
