--- a/global-typography.25.scss
+++ b/global-typography.25.scss
@@ -6,7 +6,7 @@
 html {
     font-size: #{$base_font_size}px;
     // define rules which shouldn't be applied for admin views
-    &:not(.admin) {
+    //&:not(.admin) {
 
         h1, h2, h3, h4, h5, h6,
         .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -42,5 +42,5 @@ html {
             font-family: $bold_font_family;
             font-weight: $bold_font_weight;
         }
-    }
+    //}
 }
