global z-index values updated

--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -516,4 +516,4 @@ $theme_link_active_fg: darken($theme_link_fg, 10%) !default;
 // z-indexes
 $zindex_dropdown: 900 !default;
 $zindex_fixed_header: 1000 !default;
-
+$zindex_fixed_footer: 8000 !default;
