CalendarCompact made responsive

--- a/CalendarCompact.scss
+++ b/CalendarCompact.scss
@@ -24,6 +24,11 @@
 				font-size: 1.5rem;
 			}
 
+			.previous-mobile,
+			.next-mobile {
+				display: none;
+			}
+
 			.calendar-column-title {
 				@include font_size(20);
 				font-weight: normal;
@@ -95,4 +100,31 @@
 		}
 	}
 
+}
+
+html.device-mobile {
+
+	.calendar-compact {
+
+		.calendar-header {
+
+			.calendar-header-col {
+
+				&.col-0,
+				&.col-2 {
+					display: none;
+				}
+
+				.previous-mobile,
+				.next-mobile {
+					display: block;
+				}
+			}
+		}
+
+		.calendar-body {
+			// TODO: improve height calc for mobile
+			max-height: 50vh;
+		}
+	}
 }
