revert broken admin sidebar

--- a/Default.scss
+++ b/Default.scss
@@ -1,11 +1,15 @@
-$admin_sidebar_width: px_to_rem(280);
+//$admin_sidebar_width: px_to_rem(280);
 
 .pages-default{
 	
 	> div > .admin-main-area {
 		background: #F7F7F7;
-		flex: 0 0 calc(100vw - #{$admin_sidebar_width});
-	    max-width: calc(100vw - #{$admin_sidebar_width});
+		//flex: 0 0 calc(100vw - #{$admin_sidebar_width});
+	    //max-width: calc(100vw - #{$admin_sidebar_width});
+		//position: relative;
+	    //width: 100%;
+		//padding-right: 15px;
+		//padding-left: 15px;
 	}
 	
 	> div > .admin-aside {
@@ -13,14 +17,16 @@ $admin_sidebar_width: px_to_rem(280);
 		padding-left: 0;
 		padding-right: 0;
 		position: relative;
-		flex: 0 0 $admin_sidebar_width;
-	    max-width: $admin_sidebar_width;
+		//flex: 0 0 $admin_sidebar_width;
+	    //max-width: $admin_sidebar_width;
+	    width: 100%;
 
 		.main-menu {
 			position: fixed;
 			overflow-y: auto;
 			height: 100%;
-			width: $admin_sidebar_width;
+			width: 16.666667%;
+			//width: $admin_sidebar_width;
 
 			.loop {
 
