--- a/search.scss
+++ b/search.scss
@@ -11,7 +11,7 @@
 		.suggestion {
 			@include font_size(12);
 			@include padding(5, 8);
-			color: $theme_grey;
+			color: #767676;
 			display: block;
 			width: 100%;
 			text-align: left;
@@ -25,7 +25,7 @@
 		.no-results {
 			@include font_size(12);
 			@include padding(5, 8);
-			color: $theme_grey;
+			color: #767676;
 			font-style: italic;
 		}
 	}
