--- a/global-line-clamping.26.scss
+++ b/global-line-clamping.26.scss
@@ -108,6 +108,57 @@ $data_clamp_max: 6;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
     overflow: hidden;
+
+    // account for hidden classes
+    &.hidden {
+        display: none !important;
+    }
+
+}
+
+html.device-mobile {
+
+    [data-clamp],
+    [data-clamp-xs],
+    [data-clamp-sm],
+    [data-clamp-md],
+    [data-clamp-lg],
+    [data-clamp-xl] {
+
+        &.hidden-mobile {
+            display: none !important;
+        }
+    }
+}
+
+html.device-ipad {
+
+    [data-clamp],
+    [data-clamp-xs],
+    [data-clamp-sm],
+    [data-clamp-md],
+    [data-clamp-lg],
+    [data-clamp-xl] {
+
+        &.hidden-ipad {
+            display: none !important;
+        }
+    }
+}
+
+html.device-desktop {
+
+    [data-clamp],
+    [data-clamp-xs],
+    [data-clamp-sm],
+    [data-clamp-md],
+    [data-clamp-lg],
+    [data-clamp-xl] {
+
+        &.hidden-desktop {
+            display: none !important;
+        }
+    }
 }
 
 // limit text to a single line
