--- a/global-bootstrap.55.scss
+++ b/global-bootstrap.55.scss
@@ -268,3 +268,13 @@ $pagination_min_size: get_value(minSize, bootstrap, pagination);
     // TODO: other spinner variants
     // ref: https://getbootstrap.com/docs/4.3/components/spinners/
 }
+
+html.device-mobile {
+
+    // collapse pagination links on mobile (prevents clipping)
+    .pagination .page-item .page-link {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+}
