--- a/PeerView/PeerView.scss
+++ b/PeerView/PeerView.scss
@@ -1,12 +1,4 @@
-/*
-	Optional stylesheet
-*/
-
-.peerView{
-	position: relative;
-	flex: 100 100 auto;
-	height: 100%;
-	width: 100%;
+.peerView {
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
@@ -15,6 +7,12 @@
 	background-position: bottom;
 	background-size: auto 80%;
 	background-repeat: no-repeat;
+
+	position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
 	
 	> video {
 		flex: 100 100 auto;
@@ -26,7 +24,7 @@
 		transition-duration: 0.5s;
 		background-color: rgba(#000, 0.75);
 		
-		&.hidden {
+		&.peerview-hidden {
 			opacity: 0;
 			transition-duration: 0s;
 		}
