--- a/Peers/Peers.scss
+++ b/Peers/Peers.scss
@@ -1,37 +1,26 @@
-/*
-	Optional stylesheet
-*/
-
-.peers{
-	min-height: 100%;
-	width: 100%;
-
-	padding: 40px 0 220px 0;
+.peers {
+	// NB: height set via inline style (necessary to support calc referencing header / footer heights)
+	min-height: px_to_rem(600);
+	padding-top: 3rem;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	align-content: center;
-
-
-/*
-	+mobile() {
-		min-height: 100vh;
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}
-*/
+	align-content: flex-start;
+	//width: px_to_rem(1260);
+    //max-width: 100vw;
+    margin: 0 auto;
 
 	> .peer-container {
 		overflow: hidden;
-
 		flex: 0 0 auto;
-		height: 382px;
-		width: 680px;
+
+		//width: 300px;
+		width: 23vw;
+		min-width: 300px;
+
+		position: relative;
 		margin: 6px;
 		border: 1px solid rgba(#fff, 0.15);
 		box-shadow: 0px 5px 12px 2px rgba(#111, 0.5);
@@ -41,22 +30,21 @@
 		&.active-speaker {
 			border-color: green;
 		}
-		
-		/*
-		+mobile() {
-			flex: 100 100 auto;
-			order: 2;
-			min-height: 25vh;
-			width: 100%;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-
-			&.active-speaker {
-				order: 1;
-			}
-		}
-		*/
 	}
+}
+
+html.device-mobile {
+
+	.peers {
+
+		> .peer-container {
+			border: 0;
+			box-shadow: none;
+			margin: 1px;
+			width: calc(50vw - 2px);
+			min-width: 0;
+		}
+
+	}
+
 }
